deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymtracer-mariadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gymtracer-mariadb
  template:
    metadata:
      labels:
        app: gymtracer-mariadb
    spec:
      containers:
       - name: mariadb-container
          image: mariadb:12
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: gymtracer-db-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymtracer-pma-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gymtracer-pma
  template:
    metadata:
      labels:
        app: gymtracer-pma
    spec:
      containers:
        - name: pma-container
          image: phpmyadmin
          ports:
            - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymtracer-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gymtracer-backend
  template:
    metadata:
      labels:
        app: gymtracer-backend
    spec:
      containers:
        - name: gymtracer-backend-container
          image: ghcr.io/bendehuba/gymtracer-backend:1773751988
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: v1
kind: Service
metadata:
  name: gymtracer-mariadb-clusterip
spec:
  type: ClusterIP
  selector:
    app: gymtracer-mariadb
  ports: 
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: gymtracer-pma-clusterip
spec:
  type: ClusterIP
  selector:
    app: gymtracer-pma
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: gymtracer-backend-clusterip
spec:
  type: ClusterIP
  selector:
    app: gymtracer-backend
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gymtracer-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx   
  
  tls:
    - hosts:
      - api.gymtracer.jcloud.jedlik.cloud
      - admin.gymtracer.jcloud.jedlik.cloud
      secretName: gymtracer-backend-tls

  rules:
    - host: api.gymtracer.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gymtracer-backend-clusterip
                port:
                  number: 80

    - host: admin.gymtracer.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gymtracer-pma-clusterip
                port:
                  number: 80
